Fix infinite height bug on firefox

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -40,6 +40,7 @@
     canvas {
       width: 100%;
       height: 100%;
+      max-height: 80vh;
     }
 
     .fullscreen {
